objects/SOC_Actions__c.object
<CustomObject>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_to__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned to</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SOC_Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>By_when__c</fullName>
        <label>By when</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SOC_Minutes__c</fullName>
        <label>SOC Minutes</label>
        <referenceTo>SOC_Minutes__c</referenceTo>
        <relationshipLabel>SOC Actions</relationshipLabel>
        <relationshipName>SOC_Actions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Done</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>SOC Actions</label>
    <nameField>
        <displayFormat>SOCACT-{0000}</displayFormat>
        <label>SOC Action ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SOC Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>